Changes for the upcoming UD release.

--- a/dspace-xmlui/src/main/webapp/themes/UFAL/lib/html/license-ud-2.15.html
+++ b/dspace-xmlui/src/main/webapp/themes/UFAL/lib/html/license-ud-2.15.html
@@ -1,12 +1,12 @@
 <div id="faq-like">
-  <h2 id="ufal-point-faq">Universal Dependencies v2.14 License Agreement</h2>
+  <h2 id="ufal-point-faq">Universal Dependencies v2.15 License Agreement</h2>
   <div>
-    (2024/05/15)
+    (2024/11/15)
   </div>
   <hr />
   <div class="well">
-  <h3>Universal Dependencies v2.14 License Terms</h3>
-  <p>Universal Dependencies v2.14 (referred to as &#x201C;UD&#x201D; in the rest of this document)
+  <h3>Universal Dependencies v2.15 License Terms</h3>
+  <p>Universal Dependencies v2.15 (referred to as &#x201C;UD&#x201D; in the rest of this document)
      is a collection of linguistic data and tools. Each of the treebanks has its own license terms
      and you (the &#x201C;User&#x201D;) are responsible for complying with the license terms
      applicable to those parts of UD which you use. If you do not agree with the license terms,
@@ -50,6 +50,10 @@
       </tr>
       <tr>
         <td>Akuntsu-TuDeT</td>
+        <td>CC BY-SA 4.0</td>
+      </tr>
+      <tr>
+        <td>Albanian-STAF</td>
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
@@ -121,7 +125,7 @@
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
-        <td>Beja-NSC</td>
+        <td>Beja-Autogramm</td>
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
@@ -154,6 +158,10 @@
       </tr>
       <tr>
         <td>Cantonese-HK</td>
+        <td>CC BY-SA 4.0</td>
+      </tr>
+      <tr>
+        <td>Cappadocian-AMGiC</td>
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
@@ -202,7 +210,7 @@
       </tr>
       <tr>
         <td>Classical_Armenian-CAVaL</td>
-        <td>CC BY-SA 4.0</td>
+        <td>CC BY-NC-SA 4.0</td>
       </tr>
       <tr>
         <td>Classical_Chinese-Kyoto</td>
@@ -433,6 +441,10 @@
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
+        <td>Gwichin-TueCL</td>
+        <td>CC BY-SA 4.0</td>
+      </tr>
+      <tr>
         <td>Haitian_Creole-Autogramm</td>
         <td>CC BY-SA 4.0</td>
       </tr>
@@ -447,6 +459,10 @@
       <tr>
         <td>Hebrew-HTB</td>
         <td>CC BY-NC-SA 4.0</td>
+      </tr>
+      <tr>
+        <td>Hebrew-IAHLTknesset</td>
+        <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
         <td>Hebrew-IAHLTwiki</td>
@@ -625,6 +641,10 @@
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
+        <td>Korean-KSL</td>
+        <td>CC BY-SA 4.0</td>
+      </tr>
+      <tr>
         <td>Korean-Kaist</td>
         <td>CC BY-SA 4.0</td>
       </tr>
@@ -777,6 +797,10 @@
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
+        <td>Northwest_Gbaya-Autogramm</td>
+        <td>CC BY-SA 4.0</td>
+      </tr>
+      <tr>
         <td>Norwegian-Bokmaal</td>
         <td>CC BY-SA 4.0</td>
       </tr>
@@ -829,6 +853,10 @@
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
+        <td>Pashto-Sikaram</td>
+        <td>CC BY-SA 4.0</td>
+      </tr>
+      <tr>
         <td>Paumari-TueCL</td>
         <td>CC BY-SA 4.0</td>
       </tr>
@@ -838,6 +866,14 @@
       </tr>
       <tr>
         <td>Persian-Seraji</td>
+        <td>CC BY-SA 4.0</td>
+      </tr>
+      <tr>
+        <td>Pesh-ChibErgIS</td>
+        <td>CC BY-SA 4.0</td>
+      </tr>
+      <tr>
+        <td>Phrygian-KUL</td>
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
@@ -863,6 +899,10 @@
       <tr>
         <td>Portuguese-CINTIL</td>
         <td>CC BY-NC-ND 4.0</td>
+      </tr>
+      <tr>
+        <td>Portuguese-DANTEStocks</td>
+        <td>CC BY 4.0</td>
       </tr>
       <tr>
         <td>Portuguese-GSD</td>
@@ -954,7 +994,7 @@
       </tr>
       <tr>
         <td>Slovenian-SST</td>
-        <td>CC BY-NC-SA 4.0</td>
+        <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
         <td>Soi-AHA</td>
@@ -979,6 +1019,10 @@
       <tr>
         <td>Spanish-PUD</td>
         <td>CC BY-SA 3.0</td>
+      </tr>
+      <tr>
+        <td>Spanish_Sign_Language-LSE</td>
+        <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
         <td>Swedish-LinES</td>
@@ -1089,6 +1133,10 @@
         <td>CC BY-NC-SA 4.0</td>
       </tr>
       <tr>
+        <td>Ukrainian-ParlaMint</td>
+        <td>CC BY-SA 4.0</td>
+      </tr>
+      <tr>
         <td>Umbrian-IKUVINA</td>
         <td>CC BY-SA 4.0</td>
       </tr>
@@ -1102,6 +1150,10 @@
       </tr>
       <tr>
         <td>Uyghur-UDT</td>
+        <td>CC BY-SA 4.0</td>
+      </tr>
+      <tr>
+        <td>Uzbek-UT</td>
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
