small wording update in LINDAT-Web-Crawl-Licence

--- a/dspace-xmlui/src/main/webapp/themes/UFAL/lib/html/LINDAT-Web-Crawl-Licence.html
+++ b/dspace-xmlui/src/main/webapp/themes/UFAL/lib/html/LINDAT-Web-Crawl-Licence.html
@@ -60,7 +60,7 @@ In no event shall The Publisher be liable for any claim, damages or
 other liability, whether in an action of contract, tort or otherwise,
 arising in any way of the use of the Collection.</p>
 <p><h3 id="anchor-5">Termination</h3></p>
-<p>Either The Publisher or me may terminate this Agreement at any time
+<p>Either The Publisher or The User may terminate this Agreement at any time
 by notifying the other party in writing. On termination of the Agreement
 The User shall destroy all copies of the Collection.</p>
 <p><h3 id="anchor-6">Applicable Law</h3></p>
