--- a/dspace-xmlui/src/main/webapp/themes/UFAL/lib/html/license-umr-2.0.html
+++ b/dspace-xmlui/src/main/webapp/themes/UFAL/lib/html/license-umr-2.0.html
@@ -1,12 +1,12 @@
 <div id="faq-like">
-  <h2 id="ufal-point-faq">Uniform Meaning Representation v1.0 License Agreement</h2>
+  <h2 id="ufal-point-faq">Uniform Meaning Representation v2.0 License Agreement</h2>
   <div>
-    (2023/07/31)
+    (2024/12/23)
   </div>
   <hr />
   <div class="well">
-  <h3>Uniform Meaning Representation v1.0 License Terms</h3>
-  <p>Uniform Meaning Representation v1.0 (referred to as &#x201C;UMR&#x201D; in the rest of this document)
+  <h3>Uniform Meaning Representation v2.0 License Terms</h3>
+  <p>Uniform Meaning Representation v2.0 (referred to as &#x201C;UMR&#x201D; in the rest of this document)
      is a collection of linguistic data. Each of the graphbanks has its own license terms
      and you (the &#x201C;User&#x201D;) are responsible for complying with the license terms
      applicable to those parts of UMR which you use. If you do not agree with the license terms,
@@ -34,12 +34,20 @@
         <td>CC BY-NC-ND 4.0</td>
       </tr>
       <tr>
+        <td>Czech-UMR</td>
+        <td>CC BY-NC-SA 4.0</td>
+      </tr>
+      <tr>
         <td>English-UMR</td>
         <td>CC BY-SA 4.0</td>
       </tr>
       <tr>
         <td>Kukama-UMR</td>
         <td>CC BY-NC-ND 4.0</td>
+      </tr>
+      <tr>
+        <td>Latin-UMR</td>
+        <td>CC BY-NC-SA 4.0</td>
       </tr>
       <tr>
         <td>Navajo-UMR</td>
@@ -59,6 +67,7 @@
     </thead>
     <tbody>
       <tr><td>CC BY-NC-ND 4.0</td><td><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">http://creativecommons.org/licenses/by-nc-nd/4.0/</a></td></tr>
+      <tr><td>CC BY-NC-SA 4.0</td><td><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a></td></tr>
       <tr><td>CC BY-SA 4.0</td><td><a href="http://creativecommons.org/licenses/by-sa/4.0/">http://creativecommons.org/licenses/by-sa/4.0/</a></td></tr>
     </tbody>
   </table>
